<resources>
    <string name="app_name">CVDrop</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_update_text">UPDATE</string>
    <string name="name">Name:</string>
    <string name="country_label">Country:</string>
    <string name="city_label">City:</string>
    <string name="language_label">Language:</string>
    <string name="date_of_birth_label">Date of Birth:</string>
    <string name="resume_label">Resume:</string>
    <string name="opps_no_data">Opps!! No Data</string>
</resources>